--- a/STM32 Bluepill/platformio.ini
+++ b/STM32 Bluepill/platformio.ini
@@ -8,13 +8,27 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:genericSTM32F103C8]
+[env:bluepill_f103c6]
+
+; Arduino 
+; framework = arduino
+; build_src_filter = -<*.cpp> -<.git/> +<Blinky_Arduino.cpp>
+
+; FreeRTOS
+; framework = stm32cube
+; build_src_filter = -<*.cpp> -<.git/> +<Blinky_stm32.cpp>
+; build_flags = 
+;     -Ilib/FreeRTOS/include
+;     -Ilib/FreeRTOS/portable/GCC/ARM_CM3
+;     -Iinclude
+
+; Zephyr
+
 platform = ststm32
-board = bluepill_f103c8
-framework = arduino
+board = bluepill_f103c6
 upload_protocol = jlink
 debug_tool = jlink
 debug_speed = 10000
+monitor_speed = 9600
 debug_init_break = tbreak setup
-
 
