Change folder name by removing space, and update Zephyr code

--- a/STM32_Bluepill/platformio.ini
+++ b/STM32_Bluepill/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:bluepill_f103c6]
+[env:bluepill_f103c8]
 
 ; Arduino 
 ; framework = arduino
@@ -23,12 +23,14 @@
 ;     -Iinclude
 
 ; Zephyr
+framework = zephyr
+build_src_filter = -<*.cpp> -<.git/> +<Blinky_Zephyr.c>
 
 platform = ststm32
-board = bluepill_f103c6
+board = bluepill_f103c8
 upload_protocol = jlink
 debug_tool = jlink
-debug_speed = 10000
+debug_speed = 9600
 monitor_speed = 9600
 debug_init_break = tbreak setup
 
