Working STM32 code in bare metal - eventually going to be FreeRTOS

--- a/STM32_Bluepill/platformio.ini
+++ b/STM32_Bluepill/platformio.ini
@@ -15,16 +15,17 @@
 ; build_src_filter = -<*.cpp> -<.git/> +<Blinky_Arduino.cpp>
 
 ; FreeRTOS
-; framework = stm32cube
-; build_src_filter = -<*.cpp> -<.git/> +<Blinky_stm32.cpp>
-; build_flags = 
-;     -Ilib/FreeRTOS/include
-;     -Ilib/FreeRTOS/portable/GCC/ARM_CM3
-;     -Iinclude
+framework = stm32cube
+build_src_filter = -<*.cpp> -<.git/> +<Blinky_stm32.cpp>
+build_flags = 
+    ; -Ilib/FreeRTOS/include
+    ; -Ilib/FreeRTOS/portable/GCC/ARM_CM3
+    -Iinclude
+    -Wl,-Map,output.map
 
 ; Zephyr
-framework = zephyr
-build_src_filter = -<*.cpp> -<.git/> +<Blinky_Zephyr.c>
+; framework = zephyr
+; build_src_filter = -<*.cpp> -<.git/> +<Blinky_Zephyr.c>
 
 platform = ststm32
 board = bluepill_f103c8
